--- a/index.html
+++ b/index.html
@@ -5,9 +5,48 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700,800&amp;display=swap&amp;subset=latin-ext"
+          rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>BestShop</title>
 </head>
 <body>
+
+<header class="header">
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">BestShop</div>
+
+
+            <ul class="nav_menu">
+                <li class="nav__menu__item">WHY US</li>
+                <li class="nav__menu__item">BENEFITS</li>
+                <li class="nav__menu__item">PRICES</li>
+                <li class="nav__menu__item">CONTACT</li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<main class="main">
+    <div class="section_opening">
+        <h1 class="title_section_opening">Sell More</h1>
+        <p class="paragraph_section_opening">Open shop on our platform and increase your sales</p>
+        <div class="button_section_opening_">
+            <a href="#" class="cta">Open your shop</a>
+        </div>
+    </div>
+    <!--    <div class="section_stats"></div>-->
+    <!--    <div class="section_benefits"></div>-->
+    <!--    <div class="section_pricelist"></div>-->
+    <!--    <div class="section_forms"></div>-->
+</main>
+
+<!--<footer>-->
+<!--    <div class="logo_footer">BestShop</div>-->
+<!--    <div class="copyright">© 2019 BestShop LTD, All Rights Reserved</div>-->
+<!--</footer>-->
 
 </body>
 </html>
