Another section added

--- a/index.html
+++ b/index.html
@@ -30,14 +30,27 @@
 </header>
 
 <main class="main">
+    <!--    sekcja działa-->
     <div class="section_opening">
-        <h1 class="title_section_opening">Sell More</h1>
+        <h1 class="title_section_opening">Sell More!</h1>
         <p class="paragraph_section_opening">Open shop on our platform and increase your sales</p>
         <div class="button_section_opening_">
             <a href="#" class="cta">Open your shop</a>
         </div>
     </div>
-    <!--    <div class="section_stats"></div>-->
+    <div class="section_stats">
+        <h2 class="title_section_stats">The most popular sales platform in country</h2>
+        <div class="articles_section_stats">
+            <div class="article">
+                <div class="article_image">
+                    <div class="article_circle"> </div>
+                    <img src="images/Person.svg" alt="Person" class="article_picture">
+                </div>
+                <p class="article_numbers">100000+</p>
+                <p class="article_content">daily entries</p>
+            </div>
+        </div>
+    </div>
     <!--    <div class="section_benefits"></div>-->
     <!--    <div class="section_pricelist"></div>-->
     <!--    <div class="section_forms"></div>-->
