Another section added

--- a/index.html
+++ b/index.html
@@ -43,11 +43,27 @@
         <div class="articles_section_stats">
             <div class="article">
                 <div class="article_image">
-                    <div class="article_circle"> </div>
+                    <div class="article_circle_red"></div>
                     <img src="images/Person.svg" alt="Person" class="article_picture">
                 </div>
                 <p class="article_numbers">100000+</p>
                 <p class="article_content">daily entries</p>
+            </div>
+            <div class="article">
+                <div class="article_image">
+                    <div class="article_circle_blue"></div>
+                    <img src="images/Eye.svg" alt="Eye" class="article_picture">
+                </div>
+                <p class="article_numbers">2000000+</p>
+                <p class="article_content">seen products<br>every day</p>
+            </div>
+            <div class="article">
+                <div class="article_image">
+                    <div class="article_circle_green"></div>
+                    <img src="images/Catalog.svg" alt="Catalog" class="article_picture">
+                </div>
+                <p class="article_numbers">10000+</p>
+                <p class="article_content">added posts<br>daily</p>
             </div>
         </div>
     </div>
