--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
             </div>
         </div>
     </div>
-    <!--    <div class="section_benefits"></div>-->
+    <div class="section_benefits">
+        <div class="section_benefits_box1">
+
+        </div>
+
+
+
+    </div>
     <!--    <div class="section_pricelist"></div>-->
     <!--    <div class="section_forms"></div>-->
 </main>
